--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </head>
     <body>
         <!-- header -->
-        <header class="header">
+        <!-- <header class="header">
             <div class="header__container container">
-                <!-- nav -->
+
                 <nav class="header__nav nav">
                     <a class="nav__logo logo" href="./index.html"> Web<span class="logo__span">Studio</span> </a>
                     <ul class="nav__list">
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                 </nav>
-                <!-- address -->
+
                 <address class="header__address address">
                     <ul class="address__list">
                         <li class="address__item">
@@ -47,17 +47,19 @@
                     </ul>
                 </address>
             </div>
-        </header>
+        </header> -->
         <!-- page -->
         <main class="page">
-            <!-- solutions -->
-            <section class="page__solutions solutions section">
+
+
+            <!-- <section class="page__solutions solutions section">
                 <div class="solutions__container container">
                     <h1 class="solutions__title">Effective Solutions for Your Business</h1>
                     <button class="solutions__btn" type="button">Order Service</button>
                 </div>
-            </section>
-            <!-- advantages -->
+            </section> -->
+
+
             <section class="page__advantages advantages section">
                 <div class="advantages__container container">
                     <h2 class="advantages__title visually-hidden">Our advantages</h2>
@@ -101,13 +103,14 @@
                     </ul>
                 </div>
             </section>
-            <!-- team -->
+
+
             <section class="page__team team section">
                 <div class="team__container container">
                     <h2 class="team__title section-title">Our Team</h2>
                     <ul class="team__list">
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img1.jpg" alt="Mark Guerrero" width="264" height="240" />
+                            <img class="item-team__img" src="./images/our-team-img1.jpg" alt="Mark Guerrero" width="264" height="260" />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Mark Guerrero</h3>
                                 <p class="item-team__body">Product Designer</p>
@@ -144,7 +147,7 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img2.jpg" alt="Tom Ford" width="264" height="240" />
+                            <img class="item-team__img" src="./images/our-team-img2.jpg" alt="Tom Ford" width="264" height="260" />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Tom Ford</h3>
                                 <p class="item-team__body">Frontend Developer</p>
@@ -181,7 +184,7 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img3.jpg" alt="Camila Garcia" width="264" height="240" />
+                            <img class="item-team__img" src="./images/our-team-img3.jpg" alt="Camila Garcia" width="264" height="260" />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Camila Garcia</h3>
                                 <p class="item-team__body">Marketing</p>
@@ -218,7 +221,7 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img4.jpg" alt="Daniel Wilson" width="264" height="240" />
+                            <img class="item-team__img" src="./images/our-team-img4.jpg" alt="Daniel Wilson" width="264" height="260" />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Daniel Wilson</h3>
                                 <p class="item-team__body">UI Designer</p>
@@ -257,7 +260,8 @@
                     </ul>
                 </div>
             </section>
-            <!-- portfolio -->
+
+
             <section class="page__portfolio portfolio section">
                 <div class="portfolio__container container">
                     <h2 class="portfolio__title section-title">Our Portfolio</h2>
@@ -337,9 +341,10 @@
                     </ul>
                 </div>
             </section>
+            
         </main>
         <!-- footer -->
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="footer__container container">
                 <div class="footer__column1">
                     <a class="footer__logo logo-footer logo" href="./index.html">Web<span class="logo-footer__span">Studio</span></a>
@@ -393,7 +398,7 @@
                     </form>
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- modal -->
         <div class="backdrop">
             <div class="modal">
