--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </head>
     <body>
         <!-- header -->
-        <!-- <header class="header">
+        <header class="header">
             <div class="header__container container">
 
                 <nav class="header__nav nav">
                     <a class="nav__logo logo" href="./index.html"> Web<span class="logo__span">Studio</span> </a>
-                    <ul class="nav__list">
+                    <ul class="nav__list"> 
                         <li class="nav__item">
                             <a class="nav__link active" href="./index.html"> Studio </a>
                         </li>
@@ -47,20 +47,17 @@
                     </ul>
                 </address>
             </div>
-        </header> -->
+        </header>
         <!-- page -->
         <main class="page">
-
-
-            <!-- <section class="page__solutions solutions section">
-                <div class="solutions__container container">
-                    <h1 class="solutions__title">Effective Solutions for Your Business</h1>
-                    <button class="solutions__btn" type="button">Order Service</button>
+            <!-- <section class="page__hero hero section">
+                <div class="hero__container container">
+                    <h1 class="hero__title">Effective Solutions for Your Business</h1>
+                    <button class="hero__btn" type="button">Order Service</button>
                 </div>
             </section> -->
 
-
-            <section class="page__advantages advantages section">
+            <!-- <section class="page__advantages advantages section">
                 <div class="advantages__container container">
                     <h2 class="advantages__title visually-hidden">Our advantages</h2>
                     <ul class="advantages__list">
@@ -102,15 +99,21 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
 
-
-            <section class="page__team team section">
+            <!-- <section class="page__team team section">
                 <div class="team__container container">
                     <h2 class="team__title section-title">Our Team</h2>
                     <ul class="team__list">
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img1.jpg" alt="Mark Guerrero" width="264" height="260" />
+                            <img
+                                class="item-team__img"
+                                srcset="./images/our-team-img1.jpg 1x, ./images/our-team-img1-2x.jpg 2x"
+                                src="./images/our-team-img1.jpg"
+                                alt="Mark Guerrero"
+                                width="264"
+                                height="260"
+                            />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Mark Guerrero</h3>
                                 <p class="item-team__body">Product Designer</p>
@@ -147,7 +150,14 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img2.jpg" alt="Tom Ford" width="264" height="260" />
+                            <img
+                                class="item-team__img"
+                                srcset="./images/our-team-img2.jpg 1x, ./images/our-team-img2-2x.jpg 2x"
+                                src="./images/our-team-img2.jpg"
+                                alt="Tom Ford"
+                                width="264"
+                                height="260"
+                            />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Tom Ford</h3>
                                 <p class="item-team__body">Frontend Developer</p>
@@ -184,7 +194,14 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img3.jpg" alt="Camila Garcia" width="264" height="260" />
+                            <img
+                                class="item-team__img"
+                                srcset="./images/our-team-img3.jpg 1x, ./images/our-team-img3-2x.jpg 2x"
+                                src="./images/our-team-img3.jpg"
+                                alt="Camila Garcia"
+                                width="264"
+                                height="260"
+                            />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Camila Garcia</h3>
                                 <p class="item-team__body">Marketing</p>
@@ -221,7 +238,14 @@
                             </div>
                         </li>
                         <li class="team__item item-team">
-                            <img class="item-team__img" src="./images/our-team-img4.jpg" alt="Daniel Wilson" width="264" height="260" />
+                            <img
+                                class="item-team__img"
+                                srcset="./images/our-team-img4.jpg 1x, ./images/our-team-img4-2x.jpg 2x"
+                                src="./images/our-team-img4.jpg"
+                                alt="Daniel Wilson"
+                                width="264"
+                                height="260"
+                            />
                             <div class="item-team__data">
                                 <h3 class="item-team__head">Daniel Wilson</h3>
                                 <p class="item-team__body">UI Designer</p>
@@ -259,16 +283,17 @@
                         </li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
 
-
-            <section class="page__portfolio portfolio section">
+            <!-- <section class="page__portfolio portfolio section">
                 <div class="portfolio__container container">
                     <h2 class="portfolio__title section-title">Our Portfolio</h2>
                     <ul class="portfolio__list">
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-1.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img1.jpg 1x, ./images/our-portfolio-img1-2x.jpg 2x"
+                                src="./images/our-portfolio-img1.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -280,7 +305,9 @@
                         </li>
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-2.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img2.jpg 1x, ./images/our-portfolio-img2-2x.jpg 2x"
+                                src="./images/our-portfolio-img2.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -292,7 +319,9 @@
                         </li>
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-3.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img3.jpg 1x, ./images/our-portfolio-img3-2x.jpg 2x"
+                                src="./images/our-portfolio-img3.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -304,7 +333,9 @@
                         </li>
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-4.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img4.jpg 1x, ./images/our-portfolio-img4-2x.jpg 2x"
+                                src="./images/our-portfolio-img4.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -316,7 +347,9 @@
                         </li>
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-5.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img5.jpg 1x, ./images/our-portfolio-img5-2x.jpg 2x"
+                                src="./images/our-portfolio-img5.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -328,7 +361,9 @@
                         </li>
                         <li class="portfolio__item item-portfolio">
                             <div class="item-portfolio__image-wrap">
-                                <img class="item-portfolio__img" src="./images/our-portfolio-img-6.jpg" alt="Banking App" width="360" height="300" />
+                                <img class="item-portfolio__img"
+                                srcset="./images/our-portfolio-img6.jpg 1x, ./images/our-portfolio-img6-2.jpg 2x"
+                                src="./images/our-portfolio-img6.jpg" alt="Banking App" width="360" height="300" />
                                 <p class="item-portfolio__overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -340,65 +375,68 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            
+            </section> -->
         </main>
+
         <!-- footer -->
         <!-- <footer class="footer">
             <div class="footer__container container">
-                <div class="footer__column1">
-                    <a class="footer__logo logo-footer logo" href="./index.html">Web<span class="logo-footer__span">Studio</span></a>
-                    <p class="footer__body">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-                </div>
-                <div class="footer__column2 socials-footer">
-                    <p class="socials-footer__head column-head">Social media</p>
-                    <ul class="socials-footer__list">
-                        <li class="socials-footer__item">
-                            <a class="socials-footer__link" href="#" target="_blank">
-                                <svg class="socials-footer__icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
+                <div class="footer__wrap">
+                    <div class="footer__column1">
+                        <a class="footer__logo logo-footer logo" href="./index.html">Web<span class="logo-footer__span">Studio</span></a>
+                        <p class="footer__body">Increase the flow of customers and sales for your business with digital marketing & growth hero.</p>
+                    </div>
+                    <div class="footer__column2 socials-footer">
+                        <p class="socials-footer__head column-head">Social media</p>
+                        <ul class="socials-footer__list">
+                            <li class="socials-footer__item">
+                                <a class="socials-footer__link" href="#" target="_blank">
+                                    <svg class="socials-footer__icon" width="24" height="24">
+                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials-footer__item">
+                                <a class="socials-footer__link" href="#" target="_blank">
+                                    <svg class="socials-footer__icon" width="24" height="24">
+                                        <use href="./images/icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials-footer__item">
+                                <a class="socials-footer__link" href="#" target="_blank">
+                                    <svg class="socials-footer__icon" width="24" height="24">
+                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials-footer__item">
+                                <a class="socials-footer__link" href="#" target="_blank">
+                                    <svg class="socials-footer__icon" width="24" height="24">
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__column3 subscribe">
+                        <p class="subscribe__head column-head">Subscribe</p>
+                        <form class="subscribe-form" name="subscribe-form">
+                            <label class="subscribe-form-label">
+                                <input type="email" class="subscribe-form__input" name="subscriber-name" value="" placeholder="E-mail" />
+                            </label>
+                            <button type="submit" class="subscribe-form__btn">
+                                Subscribe
+                                <svg class="subscribe-form__icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-submit"></use>
                                 </svg>
-                            </a>
-                        </li>
-                        <li class="socials-footer__item">
-                            <a class="socials-footer__link" href="#" target="_blank">
-                                <svg class="socials-footer__icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="socials-footer__item">
-                            <a class="socials-footer__link" href="#" target="_blank">
-                                <svg class="socials-footer__icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="socials-footer__item">
-                            <a class="socials-footer__link" href="#" target="_blank">
-                                <svg class="socials-footer__icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="subscribe">
-                    <p class="subscribe__head column-head">Subscribe</p>
-                    <form class="subscribe-form" name="subscribe-form">
-                        <label class="subscribe-form-label">
-                            <input type="email" class="subscribe-form__input" name="subscriber-name" value="" placeholder="E-mail" />
-                        </label>
-                        <button type="submit" class="subscribe-form__btn">
-                            Subscribe
-                            <svg class="subscribe-form__icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-submit"></use>
-                            </svg>
-                        </button>
-                    </form>
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </footer> -->
+
         <!-- modal -->
         <div class="backdrop">
             <div class="modal">
@@ -461,9 +499,7 @@
                     </div>
 
                     <button type="submit" class="modal__submit-btn">Send</button>
-
                 </form>
-
             </div>
         </div>
     </body>
