--- a/index.html
+++ b/index.html
@@ -46,18 +46,24 @@
                         </li>
                     </ul>
                 </address>
+
+                <button type="button" class="open-menu-btn">
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-burger"></use>
+                    </svg>
+                </button>
             </div>
         </header>
         <!-- page -->
         <main class="page">
-            <!-- <section class="page__hero hero section">
+            <section class="page__hero hero section">
                 <div class="hero__container container">
                     <h1 class="hero__title">Effective Solutions for Your Business</h1>
                     <button class="hero__btn" type="button">Order Service</button>
                 </div>
-            </section> -->
+            </section>
 
-            <!-- <section class="page__advantages advantages section">
+            <section class="page__advantages advantages section">
                 <div class="advantages__container container">
                     <h2 class="advantages__title visually-hidden">Our advantages</h2>
                     <ul class="advantages__list">
@@ -99,9 +105,9 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
 
-            <!-- <section class="page__team team section">
+           <section class="page__team team section">
                 <div class="team__container container">
                     <h2 class="team__title section-title">Our Team</h2>
                     <ul class="team__list">
@@ -283,9 +289,9 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
 
-            <!-- <section class="page__portfolio portfolio section">
+            <section class="page__portfolio portfolio section">
                 <div class="portfolio__container container">
                     <h2 class="portfolio__title section-title">Our Portfolio</h2>
                     <ul class="portfolio__list">
@@ -375,13 +381,13 @@
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
         </main>
 
         <!-- footer -->
-        <!-- <footer class="footer">
+        <footer class="footer">
             <div class="footer__container container">
-                <div class="footer__wrap">
+                <div class="footer__inner">
                     <div class="footer__column1">
                         <a class="footer__logo logo-footer logo" href="./index.html">Web<span class="logo-footer__span">Studio</span></a>
                         <p class="footer__body">Increase the flow of customers and sales for your business with digital marketing & growth hero.</p>
@@ -435,7 +441,7 @@
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
 
         <!-- modal -->
         <div class="backdrop">
