--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         <!-- footer -->
         <footer class="footer">
             <div class="footer__container container">
-                <div class="footer__inner">
+                <!-- <div class="footer__inner"> -->
                     <div class="footer__column1">
                         <a class="footer__logo logo-footer logo" href="./index.html">Web<span class="logo-footer__span">Studio</span></a>
                         <p class="footer__body">Increase the flow of customers and sales for your business with digital marketing & growth hero.</p>
@@ -439,7 +439,7 @@
                             </button>
                         </form>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </footer>
 
